# my-hermantic-agent

./: .coveragerc  .env.example  .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  TTD.md  hermes.md  lefthook.yml  main.py  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  rp.yml
.kiro/settings/: mcp.json
.kiro/steering/: product.md  structure.md  tech.md
config/: template.yaml
docs/: ARCHITECTURE.md  MEMORY_API.md  MODEL_PARAMETERS.md  USER_GUIDE.md  agent-context.md  agent-memory-baseline.md  agent-memory.md  model-parameter-options.md  system-architecture.md
docs/user-guides/: project-overview.md  quickstart.md
schema/: 000-init.sql  001-memory-events.sql  002-soft-delete.sql  init.sql
schema/migrations/: 001_add_embedding_dim_column.sql
scripts/: get_db_password.py  setup_db.py
scripts/hooks/: run-actionlint.sh  run-security-checks.sh  run-tests.sh  update-lockfiles.sh
src/: __init__.py  main.py  models.py
src/agent/: __init__.py  chat.py  chat_session.py  memory.py
src/core/: config.py  logging.py  utils.py
src/interfaces/cli/: chat.py
src/services/llm/: base.py  ollama_service.py
src/services/memory/: auto_writer.py  file_storage.py  langmem_extractor.py  vector_store.py
src/tools/: memory_tool.py  tool_utils.py
tests/: test_chat_loop.py  test_chat_more.py  test_chat_ollama.py  test_chat_utils.py  test_main.py  test_memory.py  test_memory_additional.py  test_memory_db_errors.py  test_memory_more.py  test_ollama_and_memory_errors.py
tests/core/: test_config.py  test_config_paths.py  test_logging.py  test_utils.py
tests/integration/: test_chat_memory_integration.py
tests/interfaces/cli/: test_chat_interface.py  test_chat_loop.py  test_chat_loop_objects.py  test_chat_session_paths.py  test_tool_calls.py
tests/services/llm/: test_ollama_service.py
tests/services/memory/: test_auto_writer.py  test_file_storage.py  test_langmem_extractor_edges.py  test_list_memories.py  test_memory_events.py  test_relevance_regression.py  test_vector_store.py  test_vector_store_additional.py  test_vector_store_db_errors.py  test_vector_store_errors.py  test_vector_store_more.py
tests/services/memory/fixtures/: relevance_regression.json
tests/tools/: test_memory_tool.py
